# wavelength-arch-decoder

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Nice to haves  README.md  RECENT_ENHANCEMENTS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_SHORT.md  RELEASE_NOTES_v0.7.8.md  SECURITY_ENHANCEMENTS_SUMMARY.md  TESTING.md  TEST_RESULTS_PHASE3.md  VERSION  bump_version.sh  kill_cargo_servers.sh  kill_port_8080.sh  test.sh  test_api.py  test_js_extraction  test_printify_plugin.sh  test_services.py  test_ui.js
ai-assistant/: .env.example  .gitignore  QUICK_START.md  README.md  requirements.txt  start.sh  test_setup.py  validate_entity_queries.py
ai-assistant/src/: __init__.py  clients.py  context_builder.py  main.py  prompt_templates.py  query_parser.py  refactoring_analyzer.py
ai-assistant/static/: README.md  app.js  index.html  style.css
config/: README.md  service_patterns.json  tool_patterns.json
config/plugins/: example_plugin.json  printify.json  printify_README.md  webmethods.json
docs/: AI_INTEGRATION_EXAMPLE.md  AI_INTEGRATION_PROPOSAL.md  API_KEYS.md  TOOL_DISCOVERY_PLAN.md
examples/: test_detectors.rs
scripts/: README-repository-detail-test.md  README.md  package.json  test-analysis-progress-playwright.js  test-main-app-progress.js  test-repository-detail-analyze.js  test-ui-playwright.js  validate-tabs-simple.sh  validate-tabs.js  validate-tabs.py  validate-tabs.sh
src/: lib.rs  main.rs
src/analysis/: code_relationships.rs  code_structure.rs  dependencies.rs  documentation.rs  endpoint_detector.rs  graph.rs  mod.rs  port_detector.rs  test_detector.rs  tool_detector.rs  utils.rs
src/api/: code.rs  documentation.rs  endpoints.rs  entity_details.rs  graph.rs  jobs.rs  mod.rs  plugins.rs  ports.rs  progress.rs  reports.rs  repositories.rs  security.rs  server.rs  services.rs  tests.rs  tools.rs  version_check.rs
src/auth/: mod.rs
src/config/: mod.rs
src/crawler/: mod.rs  processor.rs  queue.rs  webhooks.rs
src/graph/: graph.rs  mod.rs
src/graphql/: mod.rs  schema.rs  types.rs
src/ingestion/: crawler.rs  indexer.rs  mod.rs
src/parsers/: mod.rs
src/report/: generator.rs  mod.rs
src/security/: analyzer.rs  api_key_detector.rs  cloudformation.rs  env_config.rs  firebase.rs  generic_provider.rs  helpers.rs  mod.rs  pattern_config.rs  security_config.rs  serverless.rs  service_detector.rs  service_detector_printify_test.rs  templates.rs  terraform.rs  types.rs  vulnerabilities.rs
src/storage/: code_relationship_repo.rs  code_repo.rs  documentation_repo.rs  endpoint_repo.rs  (+8 more)
static/: index.html
test_repo/: openapi.json
tests/: integration_test.rs  port_endpoint_integration_test.rs  security_integration_test.rs
tests-early/: TEST_RESULTS.md  TEST_RESULTS_PHASE2.md  TEST_RESULTS_PHASE4.md  TEST_RESULTS_PHASE5.md  TEST_RESULTS_PHASE6.md  TEST_RESULTS_REPOSITORIES.md  test_phase3_services.py  test_phase4_graph.py  test_phase5_code.py  test_phase6_security.py  test_phase7_graphql.py  test_phase8_crawler.py  test_repo_clone.py  test_repositories.py  test_security_api_keys.py
(+3 files in other folders)
